made white background of service to take full width in mobile view

--- a/main.css
+++ b/main.css
@@ -165,7 +165,7 @@ nav{
 
 /*services*/
 .services{
-	padding: 50px;
+	/*padding: 50px;*/
 	background: url(img/photo-1460131548611-36aac9b6a901.jpeg);
 	background-position: cover;
 	background-attachment: fixed;
@@ -200,7 +200,7 @@ nav{
 	align-items: center;
 	justify-items: center;
 	text-align: center;
-	max-width: 1400px;
+	/*width: 100%;*/
 	margin: 0 auto;
 	grid-gap: 20px;
 	border: 2px solid #ededf373;
@@ -221,6 +221,13 @@ nav{
 	margin: 0 auto;
 	grid-gap: 20px;
 
+	}
+	.services{
+	padding: 50px;
+	background: url(img/photo-1460131548611-36aac9b6a901.jpeg);
+	background-position: cover;
+	background-attachment: fixed;
+	background-repeat: repeat;
 	}
 	
 }
